--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,10 @@
+**/node_modules
 *.swp
 **/migrations/*
 db.sqlite3
 htmlcov
 **/__pycache__
 .coverage
+venv/
+.vscode/
+flairsou_frontend/static/flairsou_frontend/main.js
