--- a/.github/workflows/Django.yml
+++ b/.github/workflows/Django.yml
@@ -32,6 +32,7 @@ jobs:
           command: |
             install
             shell
+        run: pipenv shell
 
       # Runs a set of commands using the runners shell
       - name: Copy config_template file
