Correction pipenv shell

--- a/.github/workflows/Django.yml
+++ b/.github/workflows/Django.yml
@@ -31,8 +31,7 @@ jobs:
         with:
           command: |
             install
-            shell
-        run: pipenv shell
+            pipenv shell
 
       # Runs a set of commands using the runners shell
       - name: Copy config_template file
