--- a/.github/workflows/Django.yml
+++ b/.github/workflows/Django.yml
@@ -26,12 +26,10 @@ jobs:
       - uses: actions/checkout@v2
 
       # Runs a single command using the runners shell
-      - name: Pipenv
+      - name: Pipenv install
         uses: VaultVulp/action-pipenv@v2.0.1
         with:
-          command: |
-            install
-            pipenv shell
+          command: install
 
       # Runs a set of commands using the runners shell
       - name: Copy config_template file
@@ -55,8 +53,7 @@ jobs:
     needs: [setup]
     
     steps:
-      - name: Django
-        run: |
-          python manage.py makemigrations flairsou_api
-          python manage.py migrate
-          python manage.py test
+      - name: Run pipenv test script
+        uses: VaultVulp/action-pipenv@v2.0.1
+        with:
+          command: run test
