--- a/.github/workflows/Django.yml
+++ b/.github/workflows/Django.yml
@@ -1,5 +1,3 @@
-# This is a basic workflow to help you get started with Actions
-
 name: Django CI
 
 # Controls when the action will run. 
@@ -7,8 +5,24 @@ on:
   # Triggers the workflow on push or pull request events but only for the main branch
   push:
     branches: [ main ]
+    paths:
+      - '*.py'
+      - 'Pipfile*'
+      - '.style.yapf'
+      - 'test.sh'
+      - 'flairsou/**'
+      - 'flairsou_api/**'
+      - 'flairsou_frontend/**.py'
   pull_request:
     branches: [ main ]
+    paths:
+      - '*.py'
+      - 'Pipfile*'
+      - '.style.yapf'
+      - 'test.sh'
+      - 'flairsou/**'
+      - 'flairsou_api/**'
+      - 'flairsou_frontend/**.py'
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
