--- a/.github/workflows/React.yml
+++ b/.github/workflows/React.yml
@@ -25,7 +25,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-      - uses: action/setup-node@v2
+      - uses: actions/setup-node@v2
         with:
           node-version: '12'
 
@@ -41,7 +41,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-      - uses: action/setup-node@v2
+      - uses: actions/setup-node@v2
         with:
           node-version: '12'
 
