--- a/.github/workflows/Django.yml
+++ b/.github/workflows/Django.yml
@@ -53,6 +53,9 @@ jobs:
       - name: Copy config_template file
         run: cp flairsou/config_template.py flairsou/config.py
 
+      - name: Install python3.8
+        run: apt update && apt install -y python3.8
+
       - name: Pipenv install
         uses: VaultVulp/action-pipenv@v2.0.1
         with:
