--- a/.github/workflows/Django.yml
+++ b/.github/workflows/Django.yml
@@ -54,7 +54,7 @@ jobs:
         run: cp flairsou/config_template.py flairsou/config.py
 
       - name: Install python3.8
-        run: apt update && apt install -y python3.8
+        run: sudo apt update && sudo apt install -y python3.8
 
       - name: Pipenv install
         uses: VaultVulp/action-pipenv@v2.0.1
