--- a/.github/workflows/Django.yml
+++ b/.github/workflows/Django.yml
@@ -53,15 +53,11 @@ jobs:
       - name: Copy config_template file
         run: cp flairsou/config_template.py flairsou/config.py
 
-      - name: Install python3.8
-        run: sudo apt update && sudo apt install -y python3.8
+      - name: Install python3.8 & pipenv
+        run: sudo apt update && sudo apt install -y python3.8 pipenv
 
-      - name: Pipenv install
-        uses: VaultVulp/action-pipenv@v2.0.1
-        with:
-          command: install
+      - name: Pipenv sync
+        run : pipenv sync
           
       - name: Run pipenv test script
-        uses: VaultVulp/action-pipenv@v2.0.1
-        with:
-          command: run test
+        run : pipenv run test
