Ajout option --watch pour recompilation à la sauvegarde

--- a/flairsou_frontend/package.json
+++ b/flairsou_frontend/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "webpack --mode development --entry ./src/index.js --output-path ./static/flairsou_frontend",
+    "dev": "webpack --mode development --watch --entry ./src/index.js --output-path ./static/flairsou_frontend",
     "prod": "webpack --mode production --entry ./src/index.js --output-path ./static/flairsou_frontend",
     "lint": "eslint src/**/*.js src/**/*.jsx",
     "lint-fix": "eslint src/**/*.js src/**/*.jsx --fix",
