--- a/flairsou_frontend/.eslintrc.json
+++ b/flairsou_frontend/.eslintrc.json
@@ -15,8 +15,11 @@
         "sourceType": "module"
     },
     "plugins": [
-        "react"
+        "react",
+        "react-hooks"
     ],
     "rules": {
+        "react-hooks/rules-of-hooks": "error", // Vérifie les règles des Hooks
+        "react-hooks/exhaustive-deps": "warn"  // Vérifie les tableaux de dépendances
     }
 }
