--- a/flairsou_frontend/package.json
+++ b/flairsou_frontend/package.json
@@ -33,6 +33,7 @@
     "webpack-cli": "^4.6.0"
   },
   "dependencies": {
+    "@artsy/fresnel": "^1.5.0",
     "prop-types": "^15.7.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
