--- a/.github/workflows/Django.yml
+++ b/.github/workflows/Django.yml
@@ -38,6 +38,7 @@ jobs:
 
       - name: Lint using flake8
         uses: huetremy/lintly-flake8-github-action@master
+        if: github.event_name == 'pull_request'
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
           
