Ajout de l'application pour la gestion de la doc

--- a/Pipfile
+++ b/Pipfile
@@ -14,6 +14,7 @@ djangorestframework = ">=3.12"
 django-softdelete = "*"
 django-extensions = "*"
 Django = ">=3.2"
+drf-spectacular = "*"
 
 [requires]
 python_version = "3.8"
