Installation de django-rest-multiple-models
Appli qui permet de faire une seule API pour renvoyer plusieurs
querysets

--- a/Pipfile
+++ b/Pipfile
@@ -15,6 +15,7 @@ django-softdelete = "*"
 django-extensions = "*"
 Django = "==3.2"
 drf-spectacular = "*"
+django-rest-multiple-models = "*"
 
 [requires]
 python_version = "3.8"
