--- a/flairsou_frontend/package.json
+++ b/flairsou_frontend/package.json
@@ -30,8 +30,10 @@
     "eslint-plugin-react": "^7.28.0",
     "eslint-plugin-react-hooks": "^4.2.0",
     "file-loader": "^6.2.0",
+    "sass": "^1.49.0",
+    "sass-loader": "^12.4.0",
     "style-loader": "^2.0.0",
-    "webpack": "^5.35.1",
+    "webpack": "^5.67.0",
     "webpack-cli": "^4.6.0"
   },
   "dependencies": {
