--- a/flairsou_frontend/.eslintrc.json
+++ b/flairsou_frontend/.eslintrc.json
@@ -20,6 +20,7 @@
     ],
     "rules": {
         "react-hooks/rules-of-hooks": "error", // Vérifie les règles des Hooks
-        "react-hooks/exhaustive-deps": "warn"  // Vérifie les tableaux de dépendances
+        "react-hooks/exhaustive-deps": "warn", // Vérifie les tableaux de dépendances
+        "linebreak-style": "off"
     }
 }
