--- a/flairsou_frontend/package.json
+++ b/flairsou_frontend/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "dev": "webpack --mode development --watch --devtool=eval-source-map --entry ./src/index.js --output-path ./static/flairsou_frontend",
     "build": "webpack --mode production --entry ./src/index.js --output-path ./static/flairsou_frontend",
-    "build-dev": "webpack --mode development --entry --devtool=eval-source-map ./src/index.js --output-path ./static/flairsou_frontend",
+    "build-dev": "webpack --mode development --devtool=eval-source-map --entry ./src/index.js --output-path ./static/flairsou_frontend",
     "lint": "eslint src/**/*.js src/**/*.jsx",
     "lint-fix": "eslint src/**/*.js src/**/*.jsx --fix",
     "test": "echo \"Error: no test specified\" && exit 1"
