--- a/Pipfile
+++ b/Pipfile
@@ -15,6 +15,7 @@ django-softdelete = "*"
 django-extensions = "*"
 Django = "==3.2"
 drf-spectacular = "*"
+colorama = "*"
 
 [requires]
 python_version = "3.8"
