--- a/flairsou_frontend/package.json
+++ b/flairsou_frontend/package.json
@@ -9,7 +9,7 @@
     "build-dev": "webpack --mode development --devtool=eval-source-map --entry ./src/index.js --output-path ./static/flairsou_frontend",
     "lint": "eslint src/**/*.js src/**/*.jsx",
     "lint-fix": "eslint src/**/*.js src/**/*.jsx --fix",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "react-scripts test"
   },
   "keywords": [],
   "authors": "DECAUX Matthieu, DUHAUTBOUT Thibaud, HUET Rémy",
@@ -21,6 +21,8 @@
     "@babel/plugin-transform-runtime": "^7.17.0",
     "@babel/preset-env": "^7.13.15",
     "@babel/preset-react": "^7.13.13",
+    "@testing-library/jest-dom": "^5.16.2",
+    "@testing-library/react": "^12.1.2",
     "babel-loader": "^8.2.2",
     "css-loader": "^5.2.4",
     "eslint": "^7.25.0",
@@ -30,6 +32,7 @@
     "eslint-plugin-react": "^7.28.0",
     "eslint-plugin-react-hooks": "^4.2.0",
     "file-loader": "^6.2.0",
+    "react-scripts": "^5.0.0",
     "style-loader": "^2.0.0",
     "webpack": "^5.35.1",
     "webpack-cli": "^4.6.0"
