--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -23,5 +23,5 @@ repos:
     rev: v8.9.0
     hooks:
       - id: eslint
-        files: \.[jt]sx?$  # *.js, *.jsx, *.ts and *.tsx
+        files: flairsou_frontend\.[jt]sx?$  # *.js, *.jsx, *.ts and *.tsx
         types: [ file ]
