--- a/flairsou_frontend/package.json
+++ b/flairsou_frontend/package.json
@@ -15,9 +15,10 @@
   "authors": "DECAUX Matthieu, DUHAUTBOUT Thibaud, HUET Rémy",
   "license": "MIT",
   "devDependencies": {
-    "@babel/core": "^7.13.16",
+    "@babel/core": "^7.17.5",
     "@babel/plugin-proposal-class-properties": "^7.13.0",
     "@babel/plugin-proposal-decorators": "^7.13.15",
+    "@babel/plugin-transform-runtime": "^7.17.0",
     "@babel/preset-env": "^7.13.15",
     "@babel/preset-react": "^7.13.13",
     "babel-loader": "^8.2.2",
