--- a/flairsou_frontend/.eslintrc.json
+++ b/flairsou_frontend/.eslintrc.json
@@ -21,6 +21,9 @@
     "rules": {
         "react-hooks/rules-of-hooks": "error", // Vérifie les règles des Hooks
         "react-hooks/exhaustive-deps": "warn", // Vérifie les tableaux de dépendances
-        "linebreak-style": "off"
+        "linebreak-style": "off",
+        "jsx-a11y/label-has-associated-control": [ 2, {
+            "controlComponents": ["Checkbox"]
+        }]
     }
 }
