--- a/flairsou_frontend/package.json
+++ b/flairsou_frontend/package.json
@@ -4,9 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "webpack --mode development --watch --devtool=eval-source-map --entry ./src/index.js --output-path ./static/flairsou_frontend",
-    "build": "webpack --mode production --entry ./src/index.js --output-path ./static/flairsou_frontend",
-    "build-dev": "webpack --mode development --devtool=eval-source-map --entry ./src/index.js --output-path ./static/flairsou_frontend",
+    "dev": "webpack --mode development --watch --config webpack.config.js",
+    "build": "webpack --mode production --config webpack.config.js --progress",
+    "build-dev": "webpack --mode development --config webpack.config.js --progress",
     "lint": "eslint src/**/*.js src/**/*.jsx",
     "lint-fix": "eslint src/**/*.js src/**/*.jsx --fix",
     "test": "react-scripts test"
@@ -25,6 +25,7 @@
     "@testing-library/react": "^12.1.2",
     "babel-loader": "^8.2.2",
     "css-loader": "^5.2.4",
+    "dotenv-webpack": "^7.1.0",
     "eslint": "^7.25.0",
     "eslint-config-airbnb": "^18.2.1",
     "eslint-plugin-import": "^2.22.1",
