--- a/Pipfile
+++ b/Pipfile
@@ -17,7 +17,7 @@ Django = "==3.2"
 drf-spectacular = "*"
 colorama = "*"
 oauth-pda-app = {editable = true, ref = "v0.1.0", git = "https://github.com/SiMDE-Projects/oauth_pda_utc"}
-
+pymysql = "*"
 
 [requires]
 python_version = "3.9"
