--- a/Pipfile
+++ b/Pipfile
@@ -18,6 +18,7 @@ drf-spectacular = "*"
 colorama = "*"
 oauth-pda-app = {editable = true, ref = "v0.1.0", git = "https://github.com/SiMDE-Projects/oauth_pda_utc"}
 pymysql = "*"
+django-environ = "*"
 
 [requires]
 python_version = "3.9"
