Added static folder to gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -23,6 +23,7 @@ htmlcov
 
 # Compiled outputs
 flairsou_frontend/static/flairsou_frontend/
+static/
 
 # TEMP TODO REMOVE AFTER DEV
 **/migrations/*
