--- a/.github/workflows/flairsou-ci.yml
+++ b/.github/workflows/flairsou-ci.yml
@@ -78,7 +78,7 @@ jobs:
     needs:
       - changed-files
     if: ${{ needs.changed-files.outputs.backend-changed == 'true' }}
-    runs-on: ubuntu-latest
+    runs-on: python-3.9
     steps:
       - uses: actions/checkout@v2
       - name: Copy config_template file
