--- a/.github/workflows/flairsou-ci.yml
+++ b/.github/workflows/flairsou-ci.yml
@@ -78,9 +78,13 @@ jobs:
     needs:
       - changed-files
     if: ${{ needs.changed-files.outputs.backend-changed == 'true' }}
-    runs-on: python-3.9
+    runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
+      - name: Initialize Python 3.7
+        uses: actions/setup-python@v1
+        with:
+            python-version: 3.9
       - name: Copy config_template file
         run: cp flairsou/config_template.py flairsou/config.py
       - name: Install pipenv
