--- a/Pipfile
+++ b/Pipfile
@@ -11,12 +11,12 @@ ipython = "*"
 
 [packages]
 djangorestframework = ">=3.12"
-django-softdelete = "*"
+django-softdelete = {editable = true, ref = "e7bdc4692dfc4b702bb4528bfad78e92d23f3019", git="https://github.com/scoursen/django-softdelete"}
 django-extensions = "*"
-Django = "==3.2"
+Django = ">=4.0"
 drf-spectacular = "*"
 colorama = "*"
-oauth-pda-app = {editable = true, ref = "v0.1.0", git = "https://github.com/SiMDE-Projects/oauth_pda_utc"}
+oauth-pda-app = {editable = true, ref = "v0.2.1", git = "https://github.com/SiMDE-Projects/oauth_pda_utc"}
 pymysql = "*"
 django-environ = "*"
 
