--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,37 +1,10 @@
 name: Create Release
 
 on:
-  workflow_run:
-    workflows: [ "Flairsou-CI" ]
-    branches: [ "main" ]
-    types: [ completed ]
+  push:
   workflow_dispatch:
 
 jobs:
-  on-success:
-    runs-on: ubuntu-latest
-    needs:
-      - release
-      - tag
-    steps:
-      - name: Discord notification
-        uses: Ilshidur/action-discord@master
-        env:
-          DISCORD_WEBHOOK: ${{ secrets.DISCORD_WEBHOOK }}
-        with:
-          args: 'The project {{ EVENT_PAYLOAD.repository.full_name }} has been released to ${{needs.tag.outputs.tag_name}}.'
-
-  on-failure:
-    runs-on: ubuntu-latest
-    if: ${{ github.event.workflow_run.conclusion == 'failure' }}
-    steps:
-      - name: Discord notification
-        uses: Ilshidur/action-discord@master
-        env:
-          DISCORD_WEBHOOK: ${{ secrets.DISCORD_WEBHOOK }}
-        with:
-          args: 'The project {{ EVENT_PAYLOAD.repository.full_name }} has been failed to release.'
-
   tag:
     if: ${{ github.event.workflow_run.conclusion == 'success' }} || ${{ github.event.workflow_run.workflow_dispatched }}
     name: Create Tag
